@@ -594,7 +594,8 @@ enabled     = yes
 type        = program
 module      = bat.file2package
 method      = filename2package
-xmloutput   = xmlprettyprint
+ppmodule    = bat.file2package
+ppoutput    = xmlprettyprint
 envvars     = BAT_PACKAGE_DB=/tmp/filepackages
 description = Look up name of file name in popular distributions
 enabled     = no
@@ -603,7 +604,8 @@ enabled     = no
 type        = program
 module      = bat.checks
 method      = scanForges
-xmloutput   = forgesPrettyPrint
+ppmodule    = bat.checks
+ppoutput    = forgesPrettyPrint
 noscan      = graphics:compressed:audio:video
 description = Scan for presence of markers of forges/collaborative software development sites
 enabled     = yes
@@ -628,7 +630,8 @@ enabled     = yes
 type        = program
 module      = bat.kernelanalysis
 method      = kernelChecks
-xmloutput   = xmlprettyprint
+ppmodule    = bat.kernelanalysis
+ppoutput    = xmlprettyprint
 noscan      = text:xml:graphics:pdf:compressed:audio:video:java
 description = Detect version number and some subsystems in Linux kernel
 enabled     = yes
@@ -653,7 +656,8 @@ enabled     = yes
 type        = program
 module      = bat.checks
 method      = searchDynamicLibs
-xmloutput   = dynamicLibsPrettyPrint
+ppmodule    = bat.checks
+ppoutput    = dynamicLibsPrettyPrint
 noscan      = text:xml:graphics:pdf:compressed:audio:video:java
 description = Determine dynamically linked libraries
 enabled     = yes
@@ -670,7 +674,8 @@ enabled     = yes
 type        = program
 module      = bat.checks
 method      = scanLicenses
-xmloutput   = licensesPrettyPrint
+ppmodule    = bat.checks
+ppoutput    = licensesPrettyPrint
 noscan      = compressed
 description = Scan for presence of license markers
 enabled     = yes
@@ -687,7 +692,8 @@ enabled     = yes
 type        = program
 module      = bat.checks
 method      = scanPDF
-xmloutput   = pdfPrettyPrint
+ppmodule    = bat.checks
+ppoutput    = pdfPrettyPrint
 noscan      = text:xml:graphics:compressed:audio:video:java
 description = Determine characteristics of PDF files
 enabled     = yes
@@ -696,7 +702,8 @@ enabled     = yes
 type        = program
 module      = bat.ranking
 method      = searchGeneric
-xmloutput   = xmlprettyprint
+ppmodule    = bat.ranking
+ppoutput    = xmlprettyprint
 envvars     = BAT_STRINGSCACHE_C=/gpl/master/stringscache_c:BAT_STRINGSCACHE_JAVA=/gpl/master/stringscache_java:BAT_DB=/gpl/master/master.sqlite3:BAT_NAMECACHE_C=/gpl/master/functioncache_c:BAT_NAMECACHE_JAVA=/gpl/master/functioncache_java:BAT_RANKING_FULLCACHE=1:BAT_RANKING_LICENSE=1:BAT_RANKING_VERSION=1:BAT_CLONE_DB=/tmp/clonedb:BAT_LICENSE_DB=/gpl/master/licenses.sqlite3
 #envvars     = BAT_STRINGSCACHE_C=/gpl/master/stringscache_c:BAT_STRINGSCACHE_JAVA=/gpl/master/stringscache_java:BAT_DB=/gpl/master/master.sqlite3:BAT_NAMECACHE_B=/gpl/master/functioncache_c:BAT_NAMECACHE_JAVA=/gpl/master/functioncache_java:BAT_RANKING_LICENSE=1:BAT_RANKING_VERSION=1:BAT_CLONE_DB=/tmp/clonedb:BAT_LICENSE_DB=/gpl/master/licenses.sqlite3
 noscan      = text:xml:graphics:pdf:compressed:resource:audio:video:vimswap
